implements TryFrom<Array> for Array0 and add ndarray-support feature.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,8 @@ description = """
 A dynamic computation graph library.
 """
 
+[features]
+ndarray-support = ["ndarray"]
+
 [dependencies]
-ndarray = "0.15.4"
+ndarray = { version = "0.15.4", optional = true }
